--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
              <div class="book-01"><img src="img/choinka_03.jpg" title="Amorek"><b>Amorek</b></div> 
         <div class="book-01"><img src="img/choinka_01.jpg"><b>Ozdoba #1</b></div>  
        <div class="book-01"><img src="img/choinka_02.jpg"><b>Ozdoba #2</b></div>   
-             <div class="book-01"><img src="img/stroik_01.jpg"><b>Stroik #1</b></div> 
-             <div class="book-01"><img src="img/stroik_02.jpg"><b>Stroik #2</b></div> 
-             <div class="book-01"><img src="img/stroik_03.jpg"><b>Stroik #3</b></div> 
-             <div class="book-01"><img src="img/stroik_04.jpg"><b>Stroik #4</b></div> 
-              <div class="book-01"><img src="img/choinka_04.jpg"><b>Ozdoba #4</b></div>  
-             <div class="book-01"><img src="img/choinka_05.jpg"><b>Ozdoba #5</b></div>  
-             <div class="book-01"><img src="img/choinka_06.jpg"><b>Ozdoba #6</b></div>  
-             <div class="book-01"><img src="img/choinka_07.jpg"><b>Ozdoba #7</b></div>  
-             <div class="book-01"><img src="img/choinka_08.jpg"><b>Ozdoba #8</b></div>  
+            <div class="book-01"><img src="img/stroik_01.jpg"><b>Stroik #1</b></div> 
+            <div class="book-01"><img src="img/stroik_02.jpg"><b>Stroik #2</b></div> 
+            <div class="book-01"><img src="img/stroik_03.jpg"><b>Stroik #3</b></div> 
+            <div class="book-01"><img src="img/stroik_04.jpg"><b>Stroik #4</b></div> 
+            <div class="book-01"><img src="img/choinka_04.jpg"><b>Ozdoba #4</b></div>  
+            <div class="book-01"><img src="img/choinka_05.jpg"><b>Ozdoba #5</b></div>  
+            <div class="book-01"><img src="img/choinka_06.jpg"><b>Ozdoba #6</b></div>  
+            <div class="book-01"><img src="img/choinka_07.jpg"><b>Ozdoba #7</b></div>  
+            <div class="book-01"><img src="img/choinka_08.jpg"><b>Ozdoba #8</b></div>  
              <div class="book-01"><img src="img/choinka_09.jpg"><b>Ozdoba #9</b></div>  
              <div class="book-01"><img src="img/choinka_010.jpg"><b>Ozdoba #10</b></div>  
              <div class="book-01"><img src="img/choinka_011.jpg"><b>Ozdoba #11</b></div>
@@ -47,8 +47,8 @@
       
      <!-- handmade-->
       <h2>Handmade: <span style="text-transform:none;">Do kupienia tylko na naszym grudniowym jarmarku!</span></h2>
-         <div class="goods" id="handmade"> 
-         <div class="book-01"><img src="img/jr_01.jpg"><b>Jednorożec #1</b> <i>Broszka, ~3-4 cm</i></div>
+        <div class="goods" id="handmade"> 
+        <div class="book-01"><img src="img/jr_01.jpg"><b>Jednorożec #1</b> <i>Broszka, ~3-4 cm</i></div>
         <div class="book-01"><img src="img/jr_02.jpg"><b>Jednorożec #2</b> <i>Broszka, ~3-4 cm</i></div>
         <div class="book-01"><img src="img/jr_03.jpg"><b>Jednorożec #3</b> <i>Broszka, ~3-4 cm</i></div>     
         <div class="book-01"><img src="img/tania_01.jpg"><b>Torebka #1</b> <i>Aksamit, haft,25x25 cm</i></div>  
@@ -56,6 +56,7 @@
         <div class="book-01"><img src="img/tania_03.jpg"><b>Wisiorek haftowany #1</b> <i>5x7 cm</i></div> 
         <div class="book-01"><img src="img/tania_04.jpg"><b>Wisiorek haftowany #2</b> <i>7x5 cm</i></div> 
         <div class="book-01"><img src="img/tania_05.jpg"><b>Wisiorek haftowany #3</b> <i>7x5 cm</i></div>
+        <div class="book-01"><img src="img/podkladki_01.jpg"><b>Podkładki</b> <i> cm</i></div>
         <div class="br"></div>             
    </div>
         <!--/handmade-->
@@ -67,9 +68,8 @@
         <div class="book-01"><img src="img/maria_konopnicka_01.jpg" title="Novele, Maria Konopnicka<"><b>Nowele</b> <i>Maria Konopnicka</i></div>
         <div class="book-01"><img src="img/sieniewicz_01.jpg" title="Rebelio, Moriusz Sieniewicz"><b>Rebelio</b><i>Moriusz Sieniewicz</i></div>   
         <div class="book-01"><img src="img/slon_01.jpg" title="Tropiliśmy słonia Tiemoco, Bernhard Grzimek"><b>Tropiliśmy słonia Tiemoco</b> <i>Bernhard Grzimek</i></div>
-         <div class="book-01"><img src="img/morris_01.jpg" title="Tatuażysta z Auszwitz"><b>Tatuażysta z Auszwitz</b><i>Heather Morris</i></div> 
-          <div class="book-01"><img src="img/tajemnica_01.jpg" title="Tajemnica pożarów"><b>Tajemnica pożarów</b> <i>Marłin Widmark, Helena Willis</i></div>                  
-         <div class="book-01"><img src="img/fitzpatrick_01.jpg" title="Niebespeczne kłamstwa"><b>Niebespeczne kłamstwa</b><i>Becca Fitzpatrick</i></div>
+        <div class="book-01"><img src="img/morris_01.jpg" title="Tatuażysta z Auszwitz"><b>Tatuażysta z Auszwitz</b><i>Heather Morris</i></div> 
+        <div class="book-01"><img src="img/tajemnica_01.jpg" title="Tajemnica pożarów"><b>Tajemnica pożarów</b> <i>Marłin Widmark, Helena Willis</i></div>        <div class="book-01"><img src="img/fitzpatrick_01.jpg" title="Niebespeczne kłamstwa"><b>Niebespeczne kłamstwa</b><i>Becca Fitzpatrick</i></div>
          <div class="book-01"><img src="img/michalak_01.jpg" title="Pisarka"><b>Pisarka</b> <i>Anna Michalak</i></div>
          <div class="book-01"><img src="img/pawlikowska_01.jpg" title="Błondynka w Japonii"><b>Błondynka w Japonii</b> <i>Beata Pawlikowska</i></div>
          <div class="book-01"><img src="img/elementarz_01.jpg" title="Elementarz"><b>Elementarz współczesny</b> <i>Anna Boboryk</i></div>
@@ -80,13 +80,11 @@
         <!-- russian-->
         <h2>Книги польских авторов на русском языке</h2>
      <div class="goods" id="russian">
-         <div class="book-01"><img src="img/mickiewicz_01.jpg" title="Стихотворения. Поэмы, Адам Мицкевич"><b>Стихотворения. Поэмы</b><i>Адам Мицкевич</i></div>  
-          <div class="book-01"><img src="img/lem_01.jpg" title="Солярис"><b>Солярис</b><i>Станислав Лем</i></div>
+         <div class="book-01"><img src="img/mickiewicz_01.jpg" title="Стихотворения. Поэмы, Адам Мицкевич"><b>Стихотворения. Поэмы</b><i>Адам Мицкевич</i></div>  <div class="book-01"><img src="img/lem_01.jpg" title="Солярис"><b>Солярис</b><i>Станислав Лем</i></div>
          <div class="book-01"><img src="img/lem_02.jpg" title="Охота"><b>Охота</b><i>Станислав Лем</i></div>
          <div class="book-01"><img src="img/tokarczuk_01.jpg" title=""><b>Бегуны</b><i>Ольга Токарчук</i></div>
          <div class="book-01"><img src="img/tokarczuk_02.jpg" title=""><b>Последние истории</b><i>Ольга Токарчук</i></div>
          <div class="book-01"><img src="img/tokarczuk_03.jpg" title=""><b>Диковинные истории</b><i>Ольга Токарчук</i></div>
-         
          <div class="book-01"><img src="img/jasienski_01.jpg" title="Избранное, Бруно Ясенский"><b>Избранное</b><i>Бруно Ясенский</i></div> 
          <div class="book-01"><img src="img/polish_culture_01.jpg" title="Польская культура в зеркале веков"><b>Польская культура<br/>в зеркале веков</b><i>Издательство «Материк»</i></div> 
          <div class="book-01"><img src="img/devis_01.jpg" title="Избранная лирика, Леопольд Стафф"><b>Сердце Европы</b><i>Норман Дэвис</i></div>
@@ -115,7 +113,7 @@
      <div class="goods" id="dvd">
          <div class="book-01"><img src="img/gorecki_01.jpg" title="Henryk Górecki"><b>Henryk Górecki</b><i>CD</i></div> 
          <div class="book-01"><img src="img/chopin_01.jpg" title="Frederyk Chopin"><b>Frederyk Chopin</b><i>CD</i></div> 
-          <div class="book-01"><img src="img/munk_01.jpg" title="Andrzej Munk"><b>Andrzej Munk</b><i>DVD</i></div> 
+         <div class="book-01"><img src="img/munk_01.jpg" title="Andrzej Munk"><b>Andrzej Munk</b><i>DVD</i></div> 
          <div class="book-01"><img src="img/kieslowski_01.jpg" title="Krzysztof Kiesłowski"><b>Krzysztof Kiesłowski</b><i>DVD</i></div>
          <div class="book-01"><img src="img/milosc_kino_01.jpg" title="Wypisz,wymałuj... Miłość"><b>Wypisz,wymałuj... Miłość</b><i>DVD</i></div>
          <div class="book-01"><img src="img/diana_kino_01.jpg" title="Diana"><b>Diana</b><i>DVD</i></div>
