--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
          <div class="goods" id="ozdoby_choinkowe">  
              <div class="book-01"><img src="img/aniols.jpg"><b>Aniołki</b></div>  
              <div class="book-01"><img src="img/zenek_i_ona.jpg"><b>Zenek i Ona</b></div> 
-             <div class="book-01"><img src="img/choinka_03.jpg" title="Amorek"><b>Amorek</b></div> 
+             <div class="book-01"><img src="img/choinka_03.jpg" title="Amorek"><b>Amorek</b></div>
+             <div class="book-01"><img src="img/matrioszki_01.jpg" title="Matrioszki"><b>Matrioszki</b><i>~12 cm wysokości</i></div>
              <div class="book-01"><img src="img/choinka_01.jpg"><b>Ozdoba #1</b></div>  
              <div class="book-01"><img src="img/choinka_02.jpg"><b>Ozdoba #2</b></div>   
             <div class="book-01"><img src="img/stroik_01.jpg"><b>Stroik #1</b></div> 
