--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
         <link rel="stylesheet" href="css.css" type="text/css" />
     </head>
     <body>
-        <div class="banner" title="WOŚP Moskwa 2021"></div>
+        <div class="banner" title="WOŚP Moskwa 2021">
+            <div style="padding:250px 30px 0px 0px; color:#fff; text-align:center; font-size: 36px; letter-spacing: 2px; white-space: nowrap;">Targi na rzecz WOŚP w Moskwie 12.12.2020</div>
+        </div>
         <div class="main">
      <!-- top menu-->
         <div class="topmenu-wrap">
@@ -24,18 +26,35 @@
              <div class="br"></div>   
          </div-->
          <!-- Ozdoby choinkowe-->
+      <div class="anonce"><b>Moskiewski sztab Wielkiej Orkiestry Świątecznej Pomocy</b> oraz Klub języka polskiego w Moskwie zapraszają serdecznie na charytatywny kiermasz literatury polskiej i jarmark bożonarodzeniowy. Całkowity dochód ze sprzedaży przeznaczony będzie na cele 29. Finału WOŚP, czyli zakup sprzętu dla laryngologii, otolaryngologii i diagnostyki głowy.<br/>
+          <b>Kiedy?</b> 12 grudnia 2020 w od 13.00 do 15.00<br/>
+<b>Gdzie?</b> Antykafe "Belyj list", ul. Valovaya 32/75 obok st. metra Dobryninskaya<br/>
+<b>Kontakt:</b> +7 915 2007192 (Bogna), +7 925 3205824 (Ania)
+          <p>
+          <b>Московский штаб Большого Оркестра Праздничной Помощи</b> и Клуб польского языка в Москве сердечно приглашают Вас на благотворительную ярмарку польской литературы, рождественских крафтовых изделий и подарков.
+Общий доход от продажи будет направлен на благотворительные цели 29-го финала Большого оркестра праздничной помощи, то есть на покупку оборудования для отоларингологии, ЛОР-инструментов и диагностики заболеваний головного мозга. 
+      <br/>
+          <b>Когда и где?</b> 12 декабря 2020 года с 13.00 до 15.00 в Антикафе Белый лист, ул. Валовая 32/75, 3 мин от м. Добрынинская<br/>
+          <b>Контакты</b> +7 915 2007192 (Богна), +7 925 3205824 (Аня) 
+      <div class="contacts"><a href="https://www.facebook.com/WOŚP-Moskwa-100293481406100/" target="_blank"  class="face" style="float: left;">WOŚP Moskwa Nonprofit Organization</a>
+              <a href="mailto:wosp.moskwa@gmail.com" class="wosp" style="float: left; margin-left: 20px;">wosp.moskwa@gmail.com</a></div><div class="br"></div>   
+      </div>  
+            
+       <div class="goods" id="contacts">
       <h2>Ozdoby choinkowe: <span style="text-transform:none;">Do kupienia tylko na naszym grudniowym jarmarku!</span></h2>
          <div class="goods" id="ozdoby_choinkowe">  
              <div class="book-01"><img src="img/aniols.jpg"><b>Aniołki</b></div>  
              <div class="book-01"><img src="img/zenek_i_ona.jpg"><b>Zenek i Ona</b></div> 
              <div class="book-01"><img src="img/choinka_03.jpg" title="Amorek"><b>Amorek</b></div>
-             <div class="book-01"><img src="img/matrioszki_01.jpg" title="Matrioszki"><b>Matrioszki</b><i>~12 cm wysokości</i></div>
-             <div class="book-01"><img src="img/choinka_01.jpg"><b>Ozdoba #1</b></div>  
-             <div class="book-01"><img src="img/choinka_02.jpg"><b>Ozdoba #2</b></div>   
+             <div class="book-01"><img src="img/matrioszki_01.jpg" title="Matrioszki"><b>Matrioszki</b><i>~12 cm wysokości</i></div>        
             <div class="book-01"><img src="img/stroik_01.jpg"><b>Stroik #1</b></div> 
             <div class="book-01"><img src="img/stroik_02.jpg"><b>Stroik #2</b></div> 
             <div class="book-01"><img src="img/stroik_03.jpg"><b>Stroik #3</b></div> 
             <div class="book-01"><img src="img/stroik_04.jpg"><b>Stroik #4</b></div> 
+            <div class="book-01"><img src="img/ania_02.jpg"><b>Choinka #1</b></div> 
+            <div class="book-01"><img src="img/ania_03.jpg"><b>Choinka #2</b></div>
+            <div class="book-01"><img src="img/choinka_01.jpg"><b>Ozdoba #1</b></div>  
+            <div class="book-01"><img src="img/choinka_02.jpg"><b>Ozdoba #2</b></div> 
             <div class="book-01"><img src="img/choinka_04.jpg"><b>Ozdoba #4</b></div>  
             <div class="book-01"><img src="img/choinka_05.jpg"><b>Ozdoba #5</b></div>  
             <div class="book-01"><img src="img/choinka_06.jpg"><b>Ozdoba #6</b></div>  
@@ -48,6 +67,9 @@
              <div class="book-01"><img src="img/choinka_013.jpg"><b>Ozdoba #13</b></div>
              <div class="book-01"><img src="img/choinka_014.jpg"><b>Ozdoba #14</b></div>
              <div class="book-01"><img src="img/choinka_015.jpg"><b>Ozdoba #15</b></div>
+              <div class="book-01"><img src="img/ania_01.jpg"><b>Stroik #5</b></div>
+              <div class="book-01"><img src="img/ania_04.jpg"><b>Stroik #6</b></div>
+              <div class="book-01"><img src="img/ania_05.jpg"><b>Stroik #7</b></div>
         <div class="br"></div>             
    </div>
         <!--/Ozdoby choinkowe-->
