--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible">
         <link rel="shortcut icon" href="https://wospmoskwa.github.io/favicon.ico">
         <title>WOŚP Moskwa 2021</title>
-        <link rel="stylesheet" href="css.css" type="text/css?09" />
+        <link rel="stylesheet" href="css.css" type="text/css" />
     </head>
     <body>
         <div class="banner" title="WOŚP Moskwa 2021">
