--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible">
         <link rel="shortcut icon" href="https://wospmoskwa.github.io/favicon.ico">
         <title>WOŚP Moskwa 2021</title>
-        <link rel="stylesheet" href="css.css?99" type="text/css" />
+        <link rel="stylesheet" href="css.css" type="text/css" />
     </head>
     <body>
         <div class="banner" title="WOŚP Moskwa 2021">
@@ -37,7 +37,9 @@
           <b>Когда и где?</b> 12 декабря 2020 года с 13.00 до 15.00 в Антикафе Белый лист, ул. Валовая 32/75, 3 мин от м. Добрынинская<br/>
           <b>Контакты</b> +7 915 2007192 (Богна), +7 925 3205824 (Аня) 
       <div class="contacts"><a href="https://www.facebook.com/WOŚP-Moskwa-100293481406100/" target="_blank"  class="face" style="float: left;">WOŚP Moskwa Nonprofit Organization</a>
-              <a href="mailto:wosp.moskwa@gmail.com" class="wosp" style="float: left; margin-left: 20px;">wosp.moskwa@gmail.com</a></div><div class="br"></div>   
+              <a href="mailto:wosp.moskwa@gmail.com" class="wosp" style="float: left; margin-left: 20px;">wosp.moskwa@gmail.com</a></div><div class="br"></div> 
+          <p><b>Bardzo prosimy o przestrzeganie bezpieczeństwa dla naszego wspólnego dobra. Wstęp na targi możliwy tylko dla gości w maseczkach.<br/>
+              Просим уважать друг друга и не забывать о мерах безопасности. Вход на ярмарку только в масках!</b></p>
       </div>  
             
        <div class="goods" id="contacts">
