--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
              <div class="book-01"><img src="img/zenek_i_ona.jpg"><b>Zenek i Ona</b></div> 
              <div class="book-01"><img src="img/choinka_03.jpg" title="Amorek"><b>Amorek</b></div>
              <div class="book-01"><img src="img/matrioszki_01.jpg" title="Matrioszki"><b>Matrioszki</b><i>~12 cm wysokości</i></div>        
-            <div class="book-01"><img src="img/stroik_01.jpg"><b>Ozdoba #16</b></div> 
-            <div class="book-01"><img src="img/stroik_02.jpg"><b>Ozdoba #17</b></div> 
-            <div class="book-01"><img src="img/stroik_03.jpg"><b>Ozdoba #18</b></div> 
-            <div class="book-01"><img src="img/stroik_04.jpg"><b>Ozdoba #19</b></div> 
+            <div class="book-01"><img src="img/stroik_01.jpg"><b>Ozdoba #16</b><i>~13 cm</i></div> 
+            <div class="book-01"><img src="img/stroik_02.jpg"><b>Ozdoba #17</b><i>~7 cm</i></div> 
+            <div class="book-01"><img src="img/stroik_03.jpg"><b>Ozdoba #18</b><i>~10 cm</i></div> 
+            <div class="book-01"><img src="img/stroik_04.jpg"><b>Ozdoba #19</b><i>~7 cm</i></div>  
             <div class="book-01"><img src="img/ania_02.jpg"><b>Choinka #1</b></div> 
             <div class="book-01"><img src="img/ania_03.jpg"><b>Choinka #2</b></div>
             <div class="book-01"><img src="img/choinka_01.jpg"><b>Ozdoba #1</b></div>  
