--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="book-01"><img src="img/stroik_01.jpg"><b>Ozdoba #16</b><i>~13 cm</i></div> 
             <div class="book-01"><img src="img/stroik_02.jpg"><b>Ozdoba #17</b><i>~7 cm</i></div> 
             <div class="book-01"><img src="img/stroik_03.jpg"><b>Ozdoba #18</b><i>~10 cm</i></div> 
-            <div class="book-01"><img src="img/stroik_04.jpg"><b>Ozdoba #19</b><i>~7 cm</i></div>  
+            <div class="book-01"><img src="img/stroik_04.jpg"><b>Ozdoba #19</b><i>~7 cm</i></div> 
             <div class="book-01"><img src="img/ania_02.jpg"><b>Choinka #1</b></div> 
             <div class="book-01"><img src="img/ania_03.jpg"><b>Choinka #2</b></div>
             <div class="book-01"><img src="img/choinka_01.jpg"><b>Ozdoba #1</b></div>  
@@ -100,8 +100,19 @@
         <div class="book-01"><img src="img/sieniewicz_01.jpg" title="Rebelio, Moriusz Sieniewicz"><b>Rebelio</b><i>Moriusz Sieniewicz</i></div>   
         <div class="book-01"><img src="img/slon_01.jpg" title="Tropiliśmy słonia Tiemoco, Bernhard Grzimek"><b>Tropiliśmy słonia Tiemoco</b> <i>Bernhard Grzimek</i></div>
         <div class="book-01"><img src="img/morris_01.jpg" title="Tatuażysta z Auszwitz"><b>Tatuażysta z Auszwitz</b><i>Heather Morris</i></div> 
-        <div class="book-01"><img src="img/tajemnica_01.jpg" title="Tajemnica pożarów"><b>Tajemnica pożarów</b> <i>Marłin Widmark, Helena Willis</i></div>        <div class="book-01"><img src="img/fitzpatrick_01.jpg" title="Niebespeczne kłamstwa"><b>Niebespeczne kłamstwa</b><i>Becca Fitzpatrick</i></div>
+        <div class="book-01"><img src="img/tajemnica_01.jpg" title="Tajemnica pożarów"><b>Tajemnica pożarów</b> <i>Marłin Widmark, Helena Willis</i></div>
+        <div class="book-01"><img src="img/fitzpatrick_01.jpg" title="Niebespeczne kłamstwa"><b>Niebespeczne kłamstwa</b><i>Becca Fitzpatrick</i></div>
          <div class="book-01"><img src="img/michalak_01.jpg" title="Pisarka"><b>Pisarka</b> <i>Anna Michalak</i></div>
+         <div class="book-01"><img src="img/hawkins_01.jpg" title="Zapisane w wodzie"><b>Zapisane w wodzie</b> <i>Paula Hawkins</i></div>
+         <div class="book-01"><img src="img/hawkins_02.jpg" title="Dziewczyna z pociągu"><b>Dziewczyna z pociągu</b> <i>Paula Hawkins</i></div>
+         <div class="book-01"><img src="img/gavalda_01.jpg" title="Chciałabym, żeby ktoś gdzieś na mnie czekał"><b>Chciałabym, żeby ktoś<br/>gdzieś na mnie czekał</b> <i>Anna Gavalda</i></div>
+         <div class="book-01"><img src="img/kowalewska_01.jpg" title="Cztery rzęsy nietoperza"><b>Cztery rzęsy nietoperza</b> <i>Hanna Kowalewska</i></div>
+         <div class="book-01"><img src="img/marias_01.jpg" title="Twoja twarz jutro"><b>Twoja twarz jutro</b> <i>Javier Marias</i></div>
+         <div class="book-01"><img src="img/link_01.jpg" title="Złudzenie"><b>Złudzenie</b> <i>Charlotte Link</i></div>
+         <div class="book-01"><img src="img/snajper_01.jpg" title="Snajper"><b>Snajper</b> <i>H.Wadsin, St.Templin</i></div>
+         <div class="book-01"><img src="img/atwood_01.jpg" title="Opowieść podręcznej"><b>Opowieść podręcznej</b> <i>Margaret Atwood</i></div>
+         <div class="book-01"><img src="img/mojes_01.jpg" title="Zanim się pojawiłeś"><b>Zanim się pojawiłeś</b> <i>Jojo Mojes</i></div>
+         <div class="book-01"><img src="img/bator_01.jpg" title="Ciemno, prawie noc"><b>Ciemno, prawie noc</b> <i>Joanna Bator</i></div>
          <div class="book-01"><img src="img/pawlikowska_01.jpg" title="Błondynka w Japonii"><b>Błondynka w Japonii</b> <i>Beata Pawlikowska</i></div>
          <div class="book-01"><img src="img/elementarz_01.jpg" title="Elementarz"><b>Elementarz współczesny</b> <i>Anna Boboryk</i></div>
          <div class="book-01"><img src="img/hurra_03.jpg" title="Hurra Po Polsku III"><b>Hurra Po Polsku III +2 CD</b> <i>Prolog 2017</i></div>  
