--- a/0.html
+++ b/0.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="css1.css" type="text/css" />
     </head>
     <body>
-        <div class="banner" title="WOŚP Moskwa 2021">
-            <div style="padding:170px 30px 0px 150px; color:#fff; text-align:center; font-size: 33px; line-height: 55px; letter-spacing: 2px;">ZAPRASZA NA TARGI<br/>&nbsp;&nbsp;&nbsp;&nbsp;na rzecz <b><span style="color: #FFED00;">W</span><span style="color: #EE7003;">O</span><span style="color: #E30613;">Ś</span><span style="color: #E6007E;">P</span></b> w Moskwie 12.12.2020</div>
+      <div class="banner" title="WOŚP Moskwa 2021">
+            <div style="padding:170px 30px 0px 150px; color:#fff; text-align:center; font-size: 33px; line-height: 55px; letter-spacing: 2px;">ZAPRASZA NA TARGI<br/><nobr>&nbsp;&nbsp;&nbsp;&nbsp;na rzecz <b><span style="color: #FFED00;">W</span><span style="color: #EE7003;">O</span><span style="color: #E30613;">Ś</span><span style="color: #E6007E;">P</span></b> w Moskwie 12.12.2020</nobr></div>
         </div>
         <div class="main">
      <!-- top menu-->
