--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     </head>
     <body>
         <div class="banner" title="WOŚP Moskwa 2021">
-            <div style="padding:250px 30px 0px 0px; color:#fff; text-align:center; font-size: 36px; letter-spacing: 2px; white-space: nowrap;">Targi na rzecz WOŚP w Moskwie 12.12.2020</div>
+            <div style="padding:200px 30px 0px 265px; color:#fff; text-align:center; font-size: 33px; line-height: 55px; letter-spacing: 2px; font-family:Helvetica, 'Trebuchet MS';">na targi <nobr>na rzecz <b><span style="color: #FFED00;">W</span><span style="color: #EE7003;">O</span><span style="color: #E30613;">Ś</span><span style="color: #E6007E;">P</span></b> 12.12.2020</nobr></div>
         </div>
         <div class="main">
      <!-- top menu-->
         <div class="topmenu-wrap">
-<div class="topmenu"><a href="#ozdoby_choinkowe">Ozdoby&nbsp;choinkowe</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#handmade">Handmade</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#polish">Książki&nbsp;po&nbsp;polsku</a>&nbsp;&nbsp;|&nbsp; <a href="#russian">Книги&nbsp;на&nbsp;русском</a>&nbsp;&nbsp;|&nbsp; <a href="#albumy">Albumy</a>&nbsp;&nbsp;|&nbsp; <a href="#dvd">DVD,&nbsp;CD</a>&nbsp;|&nbsp; <a href="#contacts">Kontakt</a></div><div class="br"></div>
+<div class="topmenu"><a href="#ozdoby_choinkowe">Ozdoby&nbsp;choinkowe</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#handmade">Handmade</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#polish">Książki&nbsp;po&nbsp;polsku</a>&nbsp;&nbsp;|&nbsp; <a href="#russian">Книги&nbsp;на&nbsp;русском</a>&nbsp;&nbsp;|&nbsp; <a href="#albumy">Albumy</a>&nbsp;&nbsp;|&nbsp; <a href="#dvd">DVD,&nbsp;CD</a>&nbsp;|&nbsp; <a href="#contact">Kontakt</a></div></div><div class="br"></div>
  </div><div class="br"></div>
    <!-- /top menu-->
         
@@ -26,20 +26,19 @@
              <div class="br"></div>   
          </div-->
          <!-- Ozdoby choinkowe-->
-      <div class="anonce"><b>Moskiewski sztab Wielkiej Orkiestry Świątecznej Pomocy</b> oraz Klub języka polskiego w Moskwie zapraszają serdecznie na charytatywny kiermasz literatury polskiej i jarmark bożonarodzeniowy. Całkowity dochód ze sprzedaży przeznaczony będzie na cele 29. Finału WOŚP, czyli zakup sprzętu dla laryngologii, otolaryngologii i diagnostyki głowy.<br/>
+      <div class="anonce"><b>Moskiewski sztab Wielkiej Orkiestry Świątecznej Pomocy</b> oraz Klub języka polskiego w&nbsp;Moskwie zapraszają serdecznie na&nbsp;charytatywny kiermasz literatury polskiej i&nbsp;jarmark bożonarodzeniowy. Całkowity dochód ze sprzedaży przeznaczony będzie na&nbsp;cele 29.&nbsp;Finału WOŚP, czyli zakup sprzętu dla&nbsp;laryngologii, otolaryngologii i&nbsp;diagnostyki głowy.<br/>
           <b>Kiedy?</b> 12 grudnia 2020 w od 13.00 do 15.00<br/>
-<b>Gdzie?</b> Antykafe "Belyj list", ul. Valovaya 32/75 obok st. metra Dobryninskaya<br/>
+          <b>Gdzie?</b> Antykafe <a href="#map">"Belyj list"</a>, ul. Valovaya 32/75 obok st. metra Dobryninskaya<br/>
 <b>Kontakt:</b> +7 915 2007192 (Bogna), +7 925 3205824 (Ania)
           <p>
-          <b>Московский штаб Большого Оркестра Праздничной Помощи</b> и Клуб польского языка в Москве сердечно приглашают Вас на благотворительную ярмарку польской литературы, рождественских крафтовых изделий и подарков.
-Общий доход от продажи будет направлен на благотворительные цели 29-го финала Большого оркестра праздничной помощи, то есть на покупку оборудования для отоларингологии, ЛОР-инструментов и диагностики заболеваний головного мозга. 
+          <b>Московский штаб Большого Оркестра Праздничной Помощи</b> и&nbsp;Клуб польского языка в&nbsp;Москве сердечно приглашают Вас на&nbsp;благотворительную ярмарку польской литературы, рождественских крафтовых изделий и&nbsp;подарков.
+              Общий доход от&nbsp;продажи будет направлен на&nbsp;благотворительные цели <nobr>29-го финала</nobr> Большого оркестра праздничной помощи, то&nbsp;есть на&nbsp;покупку оборудования для отоларингологии, <nobr>ЛОР-инструментов</nobr> и&nbsp;диагностики заболеваний головного мозга.
       <br/>
-          <b>Когда и где?</b> 12 декабря 2020 года с 13.00 до 15.00 в Антикафе Белый лист, ул. Валовая 32/75, 3 мин от м. Добрынинская<br/>
+          <b>Когда и где?</b> 12 декабря 2020 года с 13.00 до 15.00 в Антикафе <a href="#map">Белый лист</a>, ул. Валовая 32/75, 3 мин от м. Добрынинская<br/>
           <b>Контакты</b> +7 915 2007192 (Богна), +7 925 3205824 (Аня) 
       <div class="contacts"><a href="https://www.facebook.com/WOŚP-Moskwa-100293481406100/" target="_blank"  class="face" style="float: left;">WOŚP Moskwa Nonprofit Organization</a>
               <a href="mailto:wosp.moskwa@gmail.com" class="wosp" style="float: left; margin-left: 20px;">wosp.moskwa@gmail.com</a></div><div class="br"></div> 
-          <p><b>Bardzo prosimy o przestrzeganie bezpieczeństwa dla naszego wspólnego dobra. Wstęp na targi możliwy tylko dla gości w maseczkach.<br/>
-              Просим уважать друг друга и не забывать о мерах безопасности. Вход на ярмарку только в масках!</b></p>
+          <p class="mask"><b>Bardzo prosimy o przestrzeganie bezpieczeństwa dla naszego wspólnego dobra. Wstęp na targi możliwy tylko dla gości w maseczkach.<br/>Просим уважать друг друга и не забывать о мерах безопасности. Вход на ярмарку только в масках!</b></p>
       </div>  
             
        <div class="goods" id="contacts">
@@ -100,11 +99,10 @@
         <div class="book-01"><img src="img/sieniewicz_01.jpg" title="Rebelio, Moriusz Sieniewicz"><b>Rebelio</b><i>Moriusz Sieniewicz</i></div>   
         <div class="book-01"><img src="img/slon_01.jpg" title="Tropiliśmy słonia Tiemoco, Bernhard Grzimek"><b>Tropiliśmy słonia Tiemoco</b> <i>Bernhard Grzimek</i></div>
         <div class="book-01"><img src="img/morris_01.jpg" title="Tatuażysta z Auszwitz"><b>Tatuażysta z Auszwitz</b><i>Heather Morris</i></div> 
-        <div class="book-01"><img src="img/tajemnica_01.jpg" title="Tajemnica pożarów"><b>Tajemnica pożarów</b> <i>Marłin Widmark, Helena Willis</i></div>
-        <div class="book-01"><img src="img/fitzpatrick_01.jpg" title="Niebespeczne kłamstwa"><b>Niebespeczne kłamstwa</b><i>Becca Fitzpatrick</i></div>
+        <div class="book-01"><img src="img/tajemnica_01.jpg" title="Tajemnica pożarów"><b>Tajemnica pożarów</b> <i>Marłin Widmark, Helena Willis</i></div>        <div class="book-01"><img src="img/fitzpatrick_01.jpg" title="Niebespeczne kłamstwa"><b>Niebespeczne kłamstwa</b><i>Becca Fitzpatrick</i></div>
          <div class="book-01"><img src="img/michalak_01.jpg" title="Pisarka"><b>Pisarka</b> <i>Anna Michalak</i></div>
          <div class="book-01"><img src="img/hawkins_01.jpg" title="Zapisane w wodzie"><b>Zapisane w wodzie</b> <i>Paula Hawkins</i></div>
-         <div class="book-01"><img src="img/hawkins_02.jpg" title="Dziewczyna z pociągu"><b>Dziewczyna z pociągu</b> <i>Paula Hawkins</i></div>
+            <div class="book-01"><img src="img/hawkins_02.jpg" title="Dziewczyna z pociągu"><b>Dziewczyna z pociągu</b> <i>Paula Hawkins</i></div>
          <div class="book-01"><img src="img/gavalda_01.jpg" title="Chciałabym, żeby ktoś gdzieś na mnie czekał"><b>Chciałabym, żeby ktoś<br/>gdzieś na mnie czekał</b> <i>Anna Gavalda</i></div>
          <div class="book-01"><img src="img/kowalewska_01.jpg" title="Cztery rzęsy nietoperza"><b>Cztery rzęsy nietoperza</b> <i>Hanna Kowalewska</i></div>
          <div class="book-01"><img src="img/marias_01.jpg" title="Twoja twarz jutro"><b>Twoja twarz jutro</b> <i>Javier Marias</i></div>
@@ -170,11 +168,13 @@
         <!-- /dvd-->       
         <!-- contacts-->
         <h2>Kontakt</h2>
-      <div class="goods" id="contacts">
-          <div class="contacts"><a href="https://www.facebook.com/WOŚP-Moskwa-100293481406100/" target="_blank" class="face">WOŚP Moskwa Nonprofit Organization</a><br/>
-              <a href="mailto:wosp.moskwa@gmail.com" class="wosp">wosp.moskwa@gmail.com</a></div><div class="br"></div><br/>
+          <div class="goods" id="contact">
+          <div class="contacts"><a href="https://www.facebook.com/WOŚP-Moskwa-100293481406100/" target="_blank" class="face"  style="float: left; margin-left: 20px;">WOŚP Moskwa Nonprofit Organization</a>
+              <a href="mailto:wosp.moskwa@gmail.com" class="wosp" style="float: left; margin-left: 20px;">wosp.moskwa@gmail.com</a></div><div class="br"></div><br/>
             </div>    
        <div class="br"></div>
+           <h2>Adres</h2>
+           <div class="goods" id="map"><img src="img/map.png" width="484" height="335" class="map"></div>
       <!-- /contacts-->
    </div>
   </div>
