--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <b>Контакты</b> +7 915 2007192 (Богна), +7 925 3205824 (Аня) 
       <div class="contacts"><a href="https://www.facebook.com/WOŚP-Moskwa-100293481406100/" target="_blank"  class="face" style="float: left;">WOŚP Moskwa Nonprofit Organization</a>
               <a href="mailto:wosp.moskwa@gmail.com" class="wosp" style="float: left; margin-left: 20px;">wosp.moskwa@gmail.com</a></div><div class="br"></div> 
-          <p class="mask"><b>Bardzo prosimy o przestrzeganie bezpieczeństwa dla naszego wspólnego dobra. Wstęp na targi możliwy tylko dla gości w maseczkach.<br/>Просим уважать друг друга и не забывать о мерах безопасности. Вход на ярмарку только в масках!</b></p>
+          <p class="mask">Bardzo prosimy o przestrzeganie bezpieczeństwa dla naszego wspólnego dobra. Wstęp na targi możliwy tylko dla gości w maseczkach.<br/>Просим уважать друг друга и не забывать о мерах безопасности. Вход на ярмарку только в масках!</p>
       </div>  
             
        <div class="goods" id="contacts">
@@ -139,9 +139,9 @@
         <!-- Albumy-->
         <h2>Albumy</h2>
      <div class="goods" id="albumy">
-         <div class="book-01"><img src="img/matejko_01.jpg" title="Jan Matejko"><b>Jan Matejko</b></div>  
-        <div class="book-01"><img src="img/michalowski_01.jpg" title="Piotr Michałowski"><b>Piotr Michałowski</b></div>  
          <div class="book-01"><img src="img/polish_art_01.jpg" title="Искусство Польши"><b>Искусство Польши</b></div>
+         <div class="book-01"><img src="img/matejko_01.jpg" title="Jan Matejko"><b>Jan Matejko</b></div>  
+        <div class="book-01"><img src="img/michalowski_01.jpg" title="Piotr Michałowski"><b>Piotr Michałowski</b></div>           
          <div class="book-01"><img src="img/250_01.jpg" title="250 fotografii zamków i palaców Polskich"><b>250 fotografii<br/>zamków i palaców Polskich</b><i>Warszawa, 1957</i></div> 
          <div class="book-01"><img src="img/malopolska_01.jpg" title="Małopolska"><b>Małopolska</b></div>           
          <div class="br"></div>
