--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="css.css" type="text/css" />
     </head>
     <body>
-        <div class="banner" title="WOŚP Moskwa 2021">
-            <div style="padding:200px 30px 0px 265px; color:#fff; text-align:center; font-size: 33px; line-height: 55px; letter-spacing: 2px; font-family:Helvetica, 'Trebuchet MS';">na targi <nobr>na rzecz <b><span style="color: #FFED00;">W</span><span style="color: #EE7003;">O</span><span style="color: #E30613;">Ś</span><span style="color: #E6007E;">P</span></b> 12.12.2020</nobr></div>
+        <div class="banner" title="SZTAB Moskwa zaprasza na targi na rzecz WOŚP 12 grudnia 2020">
+            <div>na targi <nobr>na rzecz <b><span style="color: #FFED00;">W</span><span style="color: #EE7003;">O</span><span style="color: #E30613;">Ś</span><span style="color: #E6007E;">P</span></b> 12.12.2020</nobr></div>
         </div>
         <div class="main">
      <!-- top menu-->
@@ -36,8 +36,8 @@
       <br/>
           <b>Когда и где?</b> 12 декабря 2020 года с 13.00 до 15.00 в Антикафе <a href="#map">Белый лист</a>, ул. Валовая 32/75, 3 мин от м. Добрынинская<br/>
           <b>Контакты</b> +7 915 2007192 (Богна), +7 925 3205824 (Аня) 
-      <div class="contacts"><a href="https://www.facebook.com/WOŚP-Moskwa-100293481406100/" target="_blank"  class="face" style="float: left;">WOŚP Moskwa Nonprofit Organization</a>
-              <a href="mailto:wosp.moskwa@gmail.com" class="wosp" style="float: left; margin-left: 20px;">wosp.moskwa@gmail.com</a></div><div class="br"></div> 
+      <div class="contacts"><a href="https://www.facebook.com/WOŚP-Moskwa-100293481406100/" target="_blank"  class="face">WOŚP Moskwa Nonprofit Organization</a>
+              <a href="mailto:wosp.moskwa@gmail.com" class="wosp">wosp.moskwa@gmail.com</a></div><div class="br"></div> 
           <p class="mask">Bardzo prosimy o przestrzeganie bezpieczeństwa dla naszego wspólnego dobra. Wstęp na targi możliwy tylko dla gości w maseczkach.<br/>Просим уважать друг друга и не забывать о мерах безопасности. Вход на ярмарку только в масках!</p>
       </div>  
             
@@ -169,10 +169,10 @@
         <!-- contacts-->
         <h2>Kontakt</h2>
           <div class="goods" id="contact">
-          <div class="contacts"><a href="https://www.facebook.com/WOŚP-Moskwa-100293481406100/" target="_blank" class="face"  style="float: left; margin-left: 20px;">WOŚP Moskwa Nonprofit Organization</a>
-              <a href="mailto:wosp.moskwa@gmail.com" class="wosp" style="float: left; margin-left: 20px;">wosp.moskwa@gmail.com</a></div><div class="br"></div><br/>
-            </div>    
-       <div class="br"></div>
+          <div class="contacts"><a href="https://www.facebook.com/WOŚP-Moskwa-100293481406100/" target="_blank" class="face">WOŚP Moskwa Nonprofit Organization</a>
+              <a href="mailto:wosp.moskwa@gmail.com" class="wosp">wosp.moskwa@gmail.com</a></div>
+              <div class="br"></div><br/>
+            </div>     
            <h2>Adres</h2>
            <div class="goods" id="map"><img src="img/map.png" width="484" height="335" class="map"></div>
       <!-- /contacts-->
